login button alignment fixed

--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -228,9 +228,9 @@ img {
     font-weight: 600;
     margin: 10px 0;
     transition: .5s;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .social-text {
@@ -253,6 +253,7 @@ button img {
 
 .btn {
     border-radius: 49px;
+    width: 180px;
     border-color: #17094c;
     background-color: lavender;
 }
@@ -343,10 +344,16 @@ a.forgot:hover {
         position: relative;
         width: 100%;
         min-height: 100vh;
-        background-color: #ececec;
+        background-color: #dddddd;
         overflow: hidden;
         border-radius: 0;
         margin-top: 0;
+    }
+    .btn-solid {
+        margin: 0;
+    }
+    button {
+        background-color: #dddddd;
     }
 }
 
@@ -361,7 +368,7 @@ a.forgot:hover {
         width: 100%;
         left: 50%;
         top: 80%;
-        transform: translate(-50%, -80%);
+        transform: translate(-50%, -93%);
     }
     #nav-bars {
         color: black;
@@ -370,7 +377,7 @@ a.forgot:hover {
         position: relative;
         width: 100%;
         min-height: 100vh;
-        background-color: #ececec;
+        background-color: #dddddd;
         overflow: hidden;
         border-radius: 0;
         margin-top: 0;
